[package]
name = "poros"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo = { version = "0.11.0", features = ["storage"] }
gloo-net = "0.6.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
urlencoding = "2.1.3"
wasm-bindgen = { version = "0.2.100", features = ["serde", "serde_json"] }
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["console"] }
yew = { version = "0.21.0", features = ["csr"] }
